--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,5 +1,5 @@
 <wxs module="filters" src="../../utils/desw.wxs"></wxs>
-<view class='content' v-if='haveOrder'>
+<view class='content' wx:if='{{haveOrder}}'>
   <view class='orderList'>
     <view class='orderItem'  wx:for='{{orderList}}' wx:key='{{index}}' bindtap='choseOrder' data-id='{{item[0].orderID}}'>
         <view wx:for='{{item}}' wx:key='{{item.orderID}}'>
@@ -17,6 +17,6 @@
     </view>
   </view>
 </view>
-<view class='container' v-if='!haveOrder'>
+<view class='container' wx:if='{{!haveOrder}}'>
   <view class='noOrder'>暂无订单</view>
 </view>
